Add a new migration in order to add production chains and enhance land parcels management
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1647 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -41,6 +41,7 @@ arb:
     manage_inventories: 'ادارة عمبيات الجرد'
     manage_journal_entries: 'ادارة المدخلات'
     manage_journals: 'ادارة وفتح واغلاق الدفاتر اليومية'
+    #>manage_land_parcel_groups: '(((MANAGE_LAND_PARCEL_GROUPS)))'
     manage_land_parcels: 'ادارة الهيئة'
     manage_listings: 'ادارة المستخرج'
     manage_mandates: 'ادارة التفويضات'
