--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -40,9 +40,6 @@ eng:
       #>journal_entry_delete: 'Journal entry delete'
       journal_entry_line_create: 'Add a new entry line'
       #>journal_entry_update: 'Journal entry update'
-      journal_record: 'document N°%{number} du %{created_on}' #!
-      journal_record_create: 'Add a document' #!
-      journal_record_update: 'Update Document N°%{number} du %{created_on}' #!
       journal_reopen: 'Closing of %{name}'
       journal_update: 'Update journal: %{name}'
       journals: 'Journals'
@@ -188,7 +185,7 @@ eng:
       purchase_payment_mode_create: 'Add a new disbursement mode'
       #>purchase_payment_mode_delete: 'Purchase payment mode delete'
       purchase_payment_mode_update: 'Edit the disbursement mode'
-      purchase_payment_modes: 'Disbursements modes'
+      purchase_payment_modes: 'Disbursement modes'
       purchase_payment_part_create: 'Pay the purchase order %{number}'
       #>purchase_payment_part_delete: 'Purchase payment part delete'
       purchase_payment_update: 'Edit the disbursement: %{number}'
@@ -280,6 +277,11 @@ eng:
       land_parcel: 'Land parcel %{name}'
       land_parcel_create: 'Add a new land parcel'
       #>land_parcel_delete: 'Land parcel delete'
+      #>land_parcel_divide: 'Land parcel divide'
+      land_parcel_group_create: 'Add a new group of land parcels'
+      #>land_parcel_group_delete: 'Land parcel group delete'
+      land_parcel_group_update: 'Update group of land parcels: %{name}'
+      land_parcel_groups: 'Groups of land parcels'
       land_parcel_update: 'Update land parcel: %{name}'
       land_parcels: 'Land parcels'
       #>land_parcels_map: 'Land parcels map'
@@ -292,12 +294,12 @@ eng:
       operation_nature_update: 'update Type of operation: %{name}'
       operation_natures: 'Types of operation'
       operation_update: 'Update operation %{name}'
+      #>operation_use_create: 'Operation use create'
       operations: 'Operations'
       tool: 'Tool: %{name}'
       tool_create: 'Add a tool'
       #>tool_delete: 'Tool delete'
       tool_update: 'Update tool: %{name}'
-      #>tool_use_create: 'Tool use create'
       tools: 'Tools'
       unvalidated_operations: 'Operations to be Performed'
     relations:
@@ -313,20 +315,18 @@ eng:
       #>auto_complete_for_mandate_organization: 'Auto complete for mandate organization'
       #>auto_complete_for_mandate_title: 'Auto complete for mandate title'
       #>change_minutes: 'Change minutes'
-      complement: 'Personalized fields: %{name}' #!
-      complements: 'Personalized fields' #!
       contact_create: 'Add a new contact'
       #>contact_delete: 'Contact delete'
       contact_update: 'Edit the contact of %{entity}'
-      #>custom_field: 'Custom field'
+      custom_field: 'Custom field: %{name}'
       custom_field_choice_create: 'Add a new option for a choices list'
       #>custom_field_choice_down: 'Custom field choice down'
       #>custom_field_choice_up: 'Custom field choice up'
       custom_field_choice_update: 'Edit the option: %{name}'
-      custom_field_create: 'Add a new personalized field'
-      #>custom_field_sort: 'Custom field sort'
-      custom_field_update: 'Edit the personalized field: %{name}'
-      #>custom_fields: 'Custom fields'
+      custom_field_create: 'Add a new custom field'
+      custom_field_sort: 'Sort custom field choices'
+      custom_field_update: 'Edit the custom field: %{name}'
+      custom_fields: 'Custom fields'
       district_create: 'Add a new district'
       #>district_delete: 'District delete'
       district_update: 'Edit the district: %{name}'
@@ -553,7 +553,7 @@ eng:
     cumul: 'Accumulation of tattle and previous balance N°%{number}'
     current: 'Current'
     current_letter: 'Lettering in process: %{letter}'
-    custom_field_update: 'Complement update'
+    custom_field_update: 'Custom field update'
     data_to_export: 'Data to export'
     data_to_extract: 'Data to extract'
     dates: 'Select period start date and Period end date'
@@ -880,6 +880,7 @@ eng:
     one_condition: 'One condition'
     operation_lines: 'Incoming and outgoing products'
     operation_update: 'Update operation'
+    operation_use_create: 'Add a tool'
     operations: 'Operations'
     order: 'Order'
     order_amount_with_taxes: 'Order amount with taxes'
@@ -1101,7 +1102,6 @@ eng:
     to_deposit: 'To deposit'
     toggle_print_mode: 'Activate/deactivate "Printable" mode'
     tool_update: 'Update tool'
-    tool_use_create: 'Add a tool'
     tools: 'Used tools'
     tools_list: 'Tools'
     total: 'Total'
