--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -232,6 +232,7 @@ eng:
       cash_transfer: 'Cash transfer'
       company: 'Company'
       contact: 'Contact'
+      #>cultivation: 'Cultivation'
       currency: 'Currency'
       custom_field: 'Complement field'
       custom_field_choice: 'Complement field choice'
@@ -260,6 +261,8 @@ eng:
       journal_entry: 'Journal entry'
       journal_entry_line: 'Journal entry line'
       land_parcel: 'Land parcel'
+      #>land_parcel_group: 'Land parcel group'
+      #>land_parcel_kinship: 'Land parcel kinship'
       listing: 'Listing'
       listing_node: 'Listing node'
       listing_node_item: 'Listing node item'
@@ -268,11 +271,16 @@ eng:
       operation: 'Operation'
       operation_line: 'Operation line'
       operation_nature: 'Operation type'
+      operation_use: 'Tool use'
       preference: 'Preference'
       price: 'Price'
       product: 'Product'
       product_category: 'Product category'
       product_component: 'Product component'
+      #>production_chain: 'Production chain'
+      #>production_chain_operation: 'Production chain operation'
+      #>production_chain_operation_line: 'Production chain operation line'
+      #>production_chain_operation_use: 'Production chain operation use'
       profession: 'Profession'
       purchase_delivery: 'Purchase delivery'
       purchase_delivery_line: 'Purchase delivery line'
@@ -301,8 +309,8 @@ eng:
       tax: 'Tax'
       tax_declaration: 'Tax declaration'
       tool: 'Tool'
-      tool_use: 'Tool use'
       tracking: 'Tracking'
+      #>tracking_state: 'Tracking state'
       transfer: 'Transfer'
       transport: 'Transport'
       unit: 'Unit'
@@ -337,6 +345,7 @@ eng:
     areas: 'Areas'
     arrived_on: 'Arrived on'
     assimilated_taxes_amount: 'Assimilated taxes amount'
+    #>atmospheric_pressure: 'Atmospheric pressure'
     attorney: 'Attorney'
     attorney_account: 'Attorney account'
     attorney_account_id: 'Attorney account'
@@ -374,6 +383,8 @@ eng:
     changes_reflected: 'Changes reflected'
     charges_accounts: 'Charges accounts'
     check_number: 'Check number'
+    #>check_states: 'Check states'
+    #>child_land_parcel_id: 'Child land parcel'
     children: 'Children'
     choice_complements: 'Choice complements' #!
     choice_value: 'Choice value'
@@ -394,6 +405,7 @@ eng:
     code2: 'Code2'
     coefficient: 'Coefficient'
     collected_amount: 'Collected amount'
+    color: 'Color'
     comment: 'Comment'
     commercial: 'Commercial'
     commission_account: 'Commission account'
@@ -430,6 +442,7 @@ eng:
     critic_quantity_min: 'Critic quantity min'
     crypt_key: 'Crypt key'
     crypt_mode: 'Crypt mode'
+    #>cultivation_id: 'Cultivation'
     currencies: 'Currencies'
     currency: 'Currency'
     currency_amount: 'Currency amount'
@@ -530,7 +543,9 @@ eng:
     establishments: 'Establishments'
     event_natures: 'Event types'
     events: 'Events'
+    #>examinated_at: 'Examinated at'
     excise: 'Excise'
+    #>expected_duration: 'Expected duration'
     expense: 'Expense'
     expense_id: 'Expense'
     expense_type: 'Expense type'
@@ -557,6 +572,7 @@ eng:
     for_purchases: 'For purchases'
     for_sales: 'For sales'
     format: 'Format'
+    #>from_operation_line_id: 'From operation line'
     full_name: 'Full name'
     function_title: 'Function title'
     future_events: 'Future events'
@@ -565,6 +581,7 @@ eng:
     global_count: 'Global count'
     global_credit: 'Global credit'
     global_debit: 'Global debit'
+    #>group_id: 'Group'
     has_downpayment: 'Has downpayment'
     hashed_password: 'Hashed password'
     hour_duration: 'Hour duration'
@@ -644,6 +661,7 @@ eng:
     locked: 'Locked'
     longitude: 'Longitude'
     lost: 'Lost'
+    #>luminance: 'Luminance'
     mail: 'Mail'
     major_accounts: 'Major accounts'
     manage_stocks: 'Manage stocks'
@@ -662,6 +680,7 @@ eng:
     nature_code: 'Type code'
     nature_id: 'Type'
     nature_label: 'Type label'
+    #>net_weight: 'Net weight'
     nic: 'Nic'
     node: 'Node'
     node_id: 'Node'
@@ -675,7 +694,9 @@ eng:
     operation: 'Operation'
     operation_id: 'Operation'
     operation_lines: 'Operation lines'
+    #>operation_nature_id: 'Operation nature'
     operation_natures: 'Operation types'
+    operation_uses: 'Tool uses'
     operations: 'Operations'
     order: 'Order'
     order_id: 'Order'
@@ -694,6 +715,7 @@ eng:
     paid_on: 'Paid on'
     parent: 'Parent'
     parent_id: 'Parent'
+    #>parent_land_parcel_id: 'Parent land parcel'
     parts: 'Parts'
     parts_amount: 'Parts amount'
     password: 'Password'
@@ -742,6 +764,8 @@ eng:
     product_components: 'Product components'
     product_id: 'Product'
     productable_products: 'Productable products'
+    #>production_chain_id: 'Production chain'
+    #>production_chain_operation_id: 'Production chain operation'
     products: 'Products'
     products_accounts: 'Products accounts'
     profession: 'Profession'
@@ -782,6 +806,7 @@ eng:
     reductions: 'Reductions'
     reference_number: 'Reference number'
     reflation_submissive: 'Reflation submissive'
+    #>relative_humidity: 'Relative humidity'
     remaining_duration: 'Remaining duration'
     required: 'Required'
     reservoir: 'Reservoir'
@@ -869,6 +894,7 @@ eng:
     tax_declarations: 'Tax declarations'
     tax_id: 'Tax'
     taxes: 'Taxes'
+    #>temperature: 'Temperature'
     template: 'Template'
     template_id: 'Template'
     text_importance: 'Text importance'
@@ -881,9 +907,9 @@ eng:
     to_bank_on: 'To bank on'
     tool: 'Tool'
     tool_id: 'Tool'
-    tool_uses: 'Tool uses'
     tools: 'Tools'
     tools_list: 'Tools list'
+    #>total_weight: 'Total weight'
     tracking: 'Tracking'
     tracking_id: 'Tracking'
     tracking_serial: 'Tracking serial'
