--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -32,9 +32,9 @@ fra:
       journal_create: 'Créer un nouveau journal'
       journal_entry_create: 'Ajouter une écriture'
       journal_entry_line_create: 'Ajouter une nouvelle ligne d''écriture'
-      journal_record: 'Pièce comptable N°%{number} du %{created_on}'
-      journal_record_create: 'Ajouter une pièce'
-      journal_record_update: 'Modifier la pièce N°%{number} du %{created_on}'
+      journal_record: 'Pièce comptable N°%{number} du %{created_on}' #!
+      journal_record_create: 'Ajouter une pièce' #!
+      journal_record_update: 'Modifier la pièce N°%{number} du %{created_on}' #!
       journal_reopen: 'Déclôture du %{name}'
       journal_update: 'Modifier le journal : %{name}'
       journals: 'Journaux'
@@ -196,6 +196,9 @@ fra:
       index: 'Gestion de la production'
       land_parcel: 'Îlot %{name}'
       land_parcel_create: 'Ajouter un nouvel îlot'
+      #>land_parcel_group_create: 'Add a new group of land parcels'
+      #>land_parcel_group_update: 'Update group of land parcels: %{name}'
+      #>land_parcel_groups: 'Groups of land parcels'
       land_parcel_update: 'Modifier l'' îlot : %{name}'
       land_parcels: 'Îlots'
       operation: 'Détails du travail %{name}'
@@ -214,14 +217,17 @@ fra:
       area_create: 'Ajouter une zone postale'
       area_update: 'Modifier la zone postale : %{name}'
       areas: 'Zones postales'
-      complement: 'Champ personnalisé : %{name}'
-      complements: 'Champs personnalisés'
+      complement: 'Champ personnalisé : %{name}' #!
+      complements: 'Champs personnalisés' #!
       contact_create: 'Ajout d''un contact'
       contact_update: 'Modifier l''adresse de : %{entity}'
+      #>custom_field: 'Custom field: %{name}'
       custom_field_choice_create: ' Création d''une option pour une liste de choix'
       custom_field_choice_update: 'Modifier l''option : %{name}'
       custom_field_create: 'Création d''un champ personnalisé'
+      #>custom_field_sort: 'Sort custom field choices'
       custom_field_update: 'Modifier le champ personnalisé : %{name}'
+      #>custom_fields: 'Custom fields'
       district_create: 'Ajouter une zone'
       district_update: 'Modifier la zone : %{name}'
       districts: 'Zones administratives'
@@ -761,6 +767,7 @@ fra:
     one_condition: 'au moins une condition'
     operation_lines: 'Intrants et sortants'
     operation_update: 'Modifier le travail'
+    operation_use_create: 'Ajouter un matériel'
     operations: 'Travaux'
     order: 'Commande'
     order_amount_with_taxes: 'Montant de la commande'
@@ -984,7 +991,6 @@ fra:
     to_deposit: 'À encaisser'
     toggle_print_mode: 'Activer/désactiver le mode "Imprimable"'
     tool_update: 'Modifier le matériel'
-    tool_use_create: 'Ajouter un matériel'
     tools: 'Matériel utilisé'
     tools_list: 'Matériel'
     total: 'Total'
