--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -31,9 +31,6 @@ jpn:
       #>journal_create: 'Create new journal'
       #>journal_entry_create: 'Add an Entry'
       #>journal_entry_line_create: 'Add a new entry line'
-      #>journal_record: 'document N°%{number} du %{created_on}'
-      #>journal_record_create: 'Add a document'
-      #>journal_record_update: 'Update Document N°%{number} du %{created_on}'
       #>journal_reopen: 'Closing of %{name}'
       #>journal_update: 'Update journal: %{name}'
       #>journals: 'Journals'
@@ -132,7 +129,7 @@ jpn:
       #>purchase_payment_create: 'Add a new disbursement'
       #>purchase_payment_mode_create: 'Add a new disbursement mode'
       #>purchase_payment_mode_update: 'Edit the disbursement mode'
-      #>purchase_payment_modes: 'Disbursements modes'
+      #>purchase_payment_modes: 'Disbursement modes'
       #>purchase_payment_part_create: 'Pay the purchase order %{number}'
       #>purchase_payment_update: 'Edit the disbursement: %{number}'
       #>purchase_payments: 'Disbursements'
@@ -192,6 +189,9 @@ jpn:
       #>index: 'Production Management'
       #>land_parcel: 'Land parcel %{name}'
       #>land_parcel_create: 'Add a new land parcel'
+      #>land_parcel_group_create: 'Add a new group of land parcels'
+      #>land_parcel_group_update: 'Update group of land parcels: %{name}'
+      #>land_parcel_groups: 'Groups of land parcels'
       #>land_parcel_update: 'Update land parcel: %{name}'
       #>land_parcels: 'Land parcels'
       #>operation: 'Operation Details %{name}'
@@ -210,14 +210,15 @@ jpn:
       #>area_create: 'Add a postal area'
       #>area_update: 'Edit the postal area: %{name}'
       #>areas: 'Postal areas'
-      #>complement: 'Personalized fields: %{name}'
-      #>complements: 'Personalized fields'
       #>contact_create: 'Add a new contact'
       #>contact_update: 'Edit the contact of %{entity}'
+      #>custom_field: 'Custom field: %{name}'
       #>custom_field_choice_create: 'Add a new option for a choices list'
       #>custom_field_choice_update: 'Edit the option: %{name}'
-      #>custom_field_create: 'Add a new personalized field'
-      #>custom_field_update: 'Edit the personalized field: %{name}'
+      #>custom_field_create: 'Add a new custom field'
+      #>custom_field_sort: 'Sort custom field choices'
+      #>custom_field_update: 'Edit the custom field: %{name}'
+      #>custom_fields: 'Custom fields'
       #>district_create: 'Add a new district'
       #>district_update: 'Edit the district: %{name}'
       #>districts: 'Districts'
@@ -425,7 +426,7 @@ jpn:
     #>cumul: 'Accumulation of tattle and previous balance N°%{number}'
     #>current: 'Current'
     #>current_letter: 'Lettering in process: %{letter}'
-    #>custom_field_update: 'Complement update'
+    #>custom_field_update: 'Custom field update'
     #>data_to_export: 'Data to export'
     #>data_to_extract: 'Data to extract'
     #>dates: 'Select period start date and Period end date'
@@ -753,6 +754,7 @@ jpn:
     #>one_condition: 'One condition'
     #>operation_lines: 'Incoming and outgoing products'
     #>operation_update: 'Update operation'
+    #>operation_use_create: 'Add a tool'
     #>operations: 'Operations'
     #>order: 'Order'
     #>order_amount_with_taxes: 'Order amount with taxes'
@@ -974,7 +976,6 @@ jpn:
     #>to_deposit: 'To deposit'
     #>toggle_print_mode: 'Activate/deactivate "Printable" mode'
     #>tool_update: 'Update tool'
-    #>tool_use_create: 'Add a tool'
     #>tools: 'Used tools'
     #>tools_list: 'Tools'
     #>total: 'Total'
