--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -32,9 +32,9 @@ spa:
       journal_create: 'Crear un nuevo periodico'
       journal_entry_create: 'Añadir nueva escritura'
       #>journal_entry_line_create: 'Add a new entry line'
-      journal_record: 'Pieza contable N°%{number} del %{fecha de creacion}'
-      journal_record_create: 'Añadir una pieza'
-      journal_record_update: 'Modificar la pieza N°%{numro} du %{fecha de creacion}'
+      journal_record: 'Pieza contable N°%{number} del %{fecha de creacion}' #!
+      journal_record_create: 'Añadir una pieza' #!
+      journal_record_update: 'Modificar la pieza N°%{numro} du %{fecha de creacion}' #!
       journal_reopen: 'Déclôture du %{name}'
       journal_update: 'Modicicar el periodico : %{name}'
       journals: 'Periodicos'
@@ -134,7 +134,7 @@ spa:
       #>purchase_payment_create: 'Add a new disbursement'
       #>purchase_payment_mode_create: 'Add a new disbursement mode'
       #>purchase_payment_mode_update: 'Edit the disbursement mode'
-      #>purchase_payment_modes: 'Disbursements modes'
+      #>purchase_payment_modes: 'Disbursement modes'
       #>purchase_payment_part_create: 'Pay the purchase order %{number}'
       #>purchase_payment_update: 'Edit the disbursement: %{number}'
       #>purchase_payments: 'Disbursements'
@@ -194,6 +194,9 @@ spa:
       #>index: 'Production Management'
       #>land_parcel: 'Land parcel %{name}'
       #>land_parcel_create: 'Add a new land parcel'
+      #>land_parcel_group_create: 'Add a new group of land parcels'
+      #>land_parcel_group_update: 'Update group of land parcels: %{name}'
+      #>land_parcel_groups: 'Groups of land parcels'
       #>land_parcel_update: 'Update land parcel: %{name}'
       #>land_parcels: 'Land parcels'
       #>operation: 'Operation Details %{name}'
@@ -212,14 +215,15 @@ spa:
       #>area_create: 'Add a postal area'
       #>area_update: 'Edit the postal area: %{name}'
       #>areas: 'Postal areas'
-      #>complement: 'Personalized fields: %{name}'
-      #>complements: 'Personalized fields'
       #>contact_create: 'Add a new contact'
       #>contact_update: 'Edit the contact of %{entity}'
+      #>custom_field: 'Custom field: %{name}'
       #>custom_field_choice_create: 'Add a new option for a choices list'
       #>custom_field_choice_update: 'Edit the option: %{name}'
-      #>custom_field_create: 'Add a new personalized field'
-      #>custom_field_update: 'Edit the personalized field: %{name}'
+      #>custom_field_create: 'Add a new custom field'
+      #>custom_field_sort: 'Sort custom field choices'
+      #>custom_field_update: 'Edit the custom field: %{name}'
+      #>custom_fields: 'Custom fields'
       #>district_create: 'Add a new district'
       #>district_update: 'Edit the district: %{name}'
       #>districts: 'Districts'
@@ -431,7 +435,7 @@ spa:
     cumul: 'Cumul del total y del saldo precedente N°%{number}'
     #>current: 'Current'
     current_letter: 'Carta en curso : %{carta}'
-    #>custom_field_update: 'Complement update'
+    #>custom_field_update: 'Custom field update'
     data_to_export: 'Datos a exportar'
     data_to_extract: 'Datos para extraer'
     dates: 'Marcar las fechas de empezo y termino por los periodos'
@@ -772,6 +776,7 @@ spa:
     operation:
     #>operation_lines: 'Incoming and outgoing products'
     #>operation_update: 'Update operation'
+    #>operation_use_create: 'Add a tool'
     #>operations: 'Operations'
     #>order: 'Order'
     #>order_amount_with_taxes: 'Order amount with taxes'
@@ -1003,7 +1008,6 @@ spa:
     #>to_deposit: 'To deposit'
     #>toggle_print_mode: 'Activate/deactivate "Printable" mode'
     #>tool_update: 'Update tool'
-    #>tool_use_create: 'Add a tool'
     #>tools: 'Used tools'
     #>tools_list: 'Tools'
     total: 'Total'
