--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -268,6 +268,7 @@ spa:
       #>operation: 'Operation'
       #>operation_line: 'Operation line'
       #>operation_nature: 'Operation type'
+      #>operation_use: 'Tool use'
       #>preference: 'Preference'
       #>price: 'Price'
       #>product: 'Product'
@@ -301,7 +302,6 @@ spa:
       #>tax: 'Tax'
       #>tax_declaration: 'Tax declaration'
       #>tool: 'Tool'
-      #>tool_use: 'Tool use'
       #>tracking: 'Tracking'
       #>transfer: 'Transfer'
       #>transport: 'Transport'
@@ -394,6 +394,7 @@ spa:
     #>code2: 'Code2'
     #>coefficient: 'Coefficient'
     #>collected_amount: 'Collected amount'
+    #>color: 'Color'
     #>comment: 'Comment'
     #>commercial: 'Commercial'
     #>commission_account: 'Commission account'
@@ -676,6 +677,7 @@ spa:
     #>operation_id: 'Operation'
     #>operation_lines: 'Operation lines'
     #>operation_natures: 'Operation types'
+    #>operation_uses: 'Tool uses'
     #>operations: 'Operations'
     #>order: 'Order'
     #>order_id: 'Order'
@@ -881,7 +883,6 @@ spa:
     #>to_bank_on: 'To bank on'
     #>tool: 'Tool'
     #>tool_id: 'Tool'
-    #>tool_uses: 'Tool uses'
     #>tools: 'Tools'
     #>tools_list: 'Tools list'
     #>tracking: 'Tracking'
